<resources>
    <string name="app_name">Smart Car Lock</string>
    <string name="title_activity_dashboard">Dashboard</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="enter_number">Enter number</string>
    <string name="enter_password">Enter password</string>
    <string name="sign_in">Login</string>
    <string name="sign_up">Register</string>
    <string name="enter_name_">Enter name</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_phone_number">Enter phone number</string>
    <string name="register">Register</string>
    <string name="mh_12_el_8789">MH 12 EL 8789</string>
    <string name="enter_license_plate">Enter number plate</string>
    <string name="enter_model_name">Enter model name</string>
    <string name="enter_brand_name">Enter brand name</string>
    <string name="enter_chesis_number">Enter chesis number</string>
    <string name="save">Save</string>
    <string name="car_lock">Car Lock</string>
    <string name="enter_otp">Enter otp</string>
    <string name="view_location">View Location</string>
    <string name="delete">Delete</string>
</resources>
