<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".AddCarActivity">


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent" android:id="@+id/tilLP"
                                                   android:layout_height="wrap_content"
                                                   app:layout_constraintTop_toTopOf="parent"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText android:layout_width="match_parent" android:id="@+id/txtLP"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_license_plate">


        </android.support.design.widget.TextInputEditText>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tilModel"
                                                   app:layout_constraintTop_toBottomOf="@id/tilLP"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_model_name"
                                                         android:id="@+id/txtModel"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tilbName"
                                                   app:layout_constraintTop_toBottomOf="@id/tilModel"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_brand_name"
                                                         android:id="@+id/txtbName"/>


    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout android:layout_width="match_parent"
                                                   android:layout_height="wrap_content"
                                                   android:id="@+id/tilCH"
                                                   app:layout_constraintTop_toBottomOf="@id/tilbName"
                                                   android:layout_marginTop="16dp"
                                                   app:layout_constraintStart_toStartOf="parent"
                                                   android:layout_marginStart="16dp"
                                                   app:layout_constraintEnd_toEndOf="parent"
                                                   android:layout_marginEnd="16dp">


        <android.support.design.widget.TextInputEditText android:layout_width="match_parent"
                                                         android:layout_height="wrap_content"
                                                         android:hint="@string/enter_chesis_number"
                                                         android:id="@+id/txtCH"/>


    </android.support.design.widget.TextInputLayout>


    <Button android:layout_width="match_parent" android:layout_height="wrap_content" android:id="@+id/btnSave"
            app:layout_constraintTop_toBottomOf="@id/tilCH" android:text="@string/save"
            android:layout_marginTop="24dp" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="16dp"/>


</android.support.constraint.ConstraintLayout>